# weather-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: weather.py
tests/: test_weather.py
